# docu-chat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LEARNING_GUIDE.md  Makefile  README.md  alembic.ini  demo_agent_vs_classic.py  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  database.py  logger.py  main.py  simple_rag.py
app/models/: __init__.py  chat.py  document.py  schemas.py
app/routers/: __init__.py  agent_chat.py  chat.py  chat_common.py  documents.py
app/schemas/: __init__.py  chat.py  document.py  health.py
app/services/: __init__.py  agent_rag_service.py  rag_service.py
tests/: conftest.py  test_api.py  test_chat.py  test_documents.py
